# informatics_laboratories_6

./: README.md  pyproject.toml  requirements.txt
appendix/: report.docx
database/: init.sql
telegram_bot/: __main__.py
